--- a/Cash VIX Term Structure.ipynb
+++ b/Cash VIX Term Structure.ipynb
@@ -83,13 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "VIX9D = $23.41\n",
+      "VIX 1 Month = $23.58\n",
+      "VIX 3 Months = $26.15\n",
+      "VIX 6 Months = $27.39\n",
+      "VIX 1 Year = $27.88\n",
+      "\n",
+      "\n",
       "VIX9D Contango = 0.73%\n",
       "VIX Contango = 10.9%\n",
       "VIX3M Contango = 4.74%\n",
@@ -105,10 +112,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x21271223d08>]"
+       "[<matplotlib.lines.Line2D at 0x212729bf4c8>]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -126,6 +133,8 @@
     }
    ],
    "source": [
+    "print(f'VIX9D = ${round(vix9d,2)}\\nVIX 1 Month = ${round(vix,2)}\\nVIX 3 Months = ${round(vix3m,2)}\\nVIX 6 Months = ${round(vix6m,2)}\\nVIX 1 Year = ${round(vix1y,2)}\\n\\n')\n",
+    "\n",
     "print(f'VIX9D Contango = {Contango9DVix}%\\nVIX Contango = {ContangoVix3M}%\\nVIX3M Contango = {Contango3M6M}%\\nVIX6m Contango = {Contango6M1Y}%\\n\\n')\n",
     "print(f'VIX9D:VIX Ratio = {vix9dVix}\\nVIX:VIX3M Ratio = {vixVix3m}\\nVIX3M:VIX6M Ratio = {vix3mVix6m}\\nVIX6m:VIX1Y Ratio = {vix6mVix1y}')\n",
     "\n",
